k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlanticfrewaycard-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: atlanticfrewaycard-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jit-funding-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: jit-funding-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
